<resources>
    <string name="app_name">Authenticator</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="hint_email">Your email</string>
    <string name="hint_password">Your password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="hint_name">Your name</string>
    <string name="save">Save</string>
</resources>